--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Biryani</h1>
-    <a href="/odin-recipes/index.html"></a>
+    <a href="/odin-recipes/index.html">back</a>
 </body>
 </html>
