--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1><Odin-Recipes></Odin-Recipes></h1>
-    <a href = "/odin-recipes/recipes/biryani.html"></a>
+    <a href = "/odin-recipes/recipes/biryani.html">Biryani</a>
 </body>
 </html>
