--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><Odin-Recipes></Odin-Recipes></h1>
+    <h1>odin recipes</h1>
     <a href = "/odin-recipes/recipes/biryani.html">Biryani</a>
 </body>
 </html>
