--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -7,6 +7,24 @@
 </head>
 <body>
     <h1>Biryani</h1>
-    <a href="/odin-recipes/index.html">back</a>
+    <a href="/odin-recipes/index.html">Home</a>
+    <img src="https://cdn.britannica.com/35/225835-050-A5CC289A/Indian-one-pot-meal-for-party.jpg" alt="biryani">
+    <h3>Description</h3>
+    <p>Biryani is a mixed rice dish originating among the Muslims of the Indian subcontinent as a variety of Persian pilaf. It is made with Indian spices, rice, and usually some type of meat (chicken, beef, goat, lamb, prawn, fish) or in some cases without any meat (vegetarian), and sometimes, in certain varieties, eggs and/or potatoes.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 cups basmati rice</li>
+        <li>1 lb chicken, cut into pieces</li>
+        <li>1 large onion, thinly sliced</li>
+        <li>2 tomatoes, chopped</li>
+        <li>1 cup yogurt</li>
+        <li>2 tbsp biryani masala</li>
+        <li>1 tsp turmeric powder</li>
+        <li>1 tsp red chili powder</li>
+        <li>1/2 cup chopped cilantro</li>
+        <li>1/2 cup chopped mint leaves</li>
+        <li>4 cups water</li>
+        <li>Salt to taste</li>
+        <li>3 tbsp ghee or oil</li>
 </body>
 </html>
