--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>odin recipes</h1>
+    <h1>Odin recipes</h1>
     <a href = "/odin-recipes/recipes/biryani.html">Biryani</a>
+    <br>
+    <a href = "/odin-recipes/recipes/alooparatha.html">Aloo Paratha</a>
+    <br>
+    <a href = "/odin-recipes/recipes/fishfry.html">Fish Fry</a>
 </body>
 </html>
