--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Biryani</h1>
-    <a href="/odin-recipes/index.html">Home</a>
     <img src="https://cdn.britannica.com/35/225835-050-A5CC289A/Indian-one-pot-meal-for-party.jpg" alt="biryani">
     <h3>Description</h3>
     <p>Biryani is a mixed rice dish originating among the Muslims of the Indian subcontinent as a variety of Persian pilaf. It is made with Indian spices, rice, and usually some type of meat (chicken, beef, goat, lamb, prawn, fish) or in some cases without any meat (vegetarian), and sometimes, in certain varieties, eggs and/or potatoes.</p>
@@ -26,5 +25,19 @@
         <li>4 cups water</li>
         <li>Salt to taste</li>
         <li>3 tbsp ghee or oil</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Rinse the basmati rice under cold water until the water runs clear. Soak the rice in water for 30 minutes, then drain.</li>
+        <li>Heat ghee or oil in a large pot over medium heat. Add the sliced onions and sauté until golden brown.</li>
+        <li>Add the chicken pieces and cook until they are no longer pink.</li>
+        <li>Add the chopped tomatoes, yogurt, biryani masala, turmeric powder, red chili powder, and salt. Cook until the oil separates from the masala.</li>
+        <li>Add the chopped cilantro and mint leaves. Mix well.</li>
+        <li>Add the soaked and drained rice to the pot. Gently mix to combine with the chicken and spices.</li>
+        <li>Pour in 4 cups of water. Bring to a boil, then reduce the heat to low. Cover the pot with a tight-fitting lid and cook for 20-25 minutes, or until the rice is cooked and all the water is absorbed.</li>
+        <li>Turn off the heat and let the biryani sit, covered, for an additional 10 minutes.</li>
+        <li>Fluff the biryani with a fork before serving. Enjoy!</li>
+    </ol>
+     <a href="/odin-recipes/index.html">Home</a>
 </body>
 </html>
