--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href = "/odin-recipes/recipes/biryani.html">Biryani</a>
-    <br>
-    <a href = "/odin-recipes/recipes/alooparatha.html">Aloo Paratha</a>
-    <br>
+    <h3>List of Recipes</h3>
+    <ul>
+    <a href = "/odin-recipes/recipes/biryani.html">Biryani</a><br>
+    <a href = "/odin-recipes/recipes/alooparatha.html">Aloo Paratha</a><br>
     <a href = "/odin-recipes/recipes/fishfry.html">Fish Fry</a>
+    </ul>
 </body>
 </html>
