--- a/recipes/alooparatha.html
+++ b/recipes/alooparatha.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Aloo Paratha</h1>
-    <img src="https://tse3.mm.bing.net/th/id/OIP.IWm9rTKEUQsVoE2tpORnDwHaKA?r=0&rs=1&pid=ImgDetMain&o=7&rm=3" alt="aloo paratha">
+    <img src="https://tse3.mm.bing.net/th/id/OIP.IWm9rTKEUQsVoE2tpORnDwHaKA?r=0&rs=1&pid=ImgDetMain&o=7&rm=3"height = 200px alt="aloo paratha">
     <h3>Description</h3>
     <p>Aloo Paratha is a popular Indian flatbread stuffed with a spiced potato filling. It is typically served with yogurt, pickles, or butter and is a common breakfast dish in North India.</p>
     <h3>Ingredients</h3>
