--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Biryani</h1>
-    <img src="https://cdn.britannica.com/35/225835-050-A5CC289A/Indian-one-pot-meal-for-party.jpg" alt="biryani">
+    <img src="https://cdn.britannica.com/35/225835-050-A5CC289A/Indian-one-pot-meal-for-party.jpg" height= 100px alt="biryani">
     <h3>Description</h3>
     <p>Biryani is a mixed rice dish originating among the Muslims of the Indian subcontinent as a variety of Persian pilaf. It is made with Indian spices, rice, and usually some type of meat (chicken, beef, goat, lamb, prawn, fish) or in some cases without any meat (vegetarian), and sometimes, in certain varieties, eggs and/or potatoes.</p>
     <h3>Ingredients</h3>
