--- a/recipes/fishfry.html
+++ b/recipes/fishfry.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Fish Fry</h1>
-   <img src="https://thafd.bing.com/th/id/OIP.Kn4wigV0swo8pDzYeMDAvwHaFH?w=276&h=190&c=7&r=0&o=7&pid=1.7&rm=3" alt="fish fry">
+   <img src="https://thafd.bing.com/th/id/OIP.Kn4wigV0swo8pDzYeMDAvwHaFH?w=276&h=190&c=7&r=0&o=7&pid=1.7&rm=3" width= 200px alt="fish fry">
    <h3>Description</h3>
     <p>Fish fry is a popular dish made by coating fish fillets in a seasoned batter or breading and then deep-frying them until they are golden brown and crispy. It is often served with tartar sauce, lemon wedges, and coleslaw.</p>
     <h3>Ingredients</h3>
